# ALPR_1.5_Public

./: LICENSE  README.md
ALPR_1.5/: ALPR_1.5.cbp  ALPR_1.5_Jetson.cbp  CMakeLists.txt  README.md  config.json
ALPR_1.5/doxygen/: doxyfile
ALPR_1.5/doxygen/html/: _b_y_t_e_tracker_8h_source.html  _f_p_s_8h_source.html  _general_8h_source.html  _kmain_8h_source.html  _locate_8h_source.html  _m_j_p_g__sender_8h_source.html  _m_j_p_gthread_8h_source.html  _m_q_t_t_8h_source.html  _numbers_8h_source.html  _process_pipe_8h_source.html  _regression_8h_source.html  _s_track_8h_source.html  _t_album_8h_source.html  _t_f_fmpeg_8h_source.html  _t_gstreamer_8h_source.html  _t_mapper_8h_source.html  _t_o_c_r_8h_source.html  _t_ostreamer_8h_source.html  _t_portal_8h_source.html  _thread_cam_8h_source.html  _time_keeper_8h_source.html  _tjson_8h_source.html  annotated.html  annotated_dup.js  class_b_y_t_e_tracker-members.html  class_b_y_t_e_tracker.html  class_kmain-members.html  class_kmain.html  class_m_j_p_g__sender-members.html  class_m_j_p_g__sender.html  class_m_j_p_gthread-members.html  class_m_j_p_gthread.html  class_s_track-members.html  class_s_track.html  class_t_album-members.html  class_t_album.html  class_t_album.js  class_t_f_fmpeg-members.html  class_t_f_fmpeg.html  class_t_f_p_s-members.html  (+129 more)
ALPR_1.5/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  searchdata.js  variables_1.js  variables_11.js  variables_12.js  variables_13.js  variables_2.js  variables_3.js  variables_4.js  (+8 more)
ALPR_1.5/include/: FPS.h  General.h  Kmain.h  Locate.h  Numbers.h  ProcessPipe.h  Regression.h  TAlbum.h  TCollection.h  TFFmpeg.h  TGstreamer.h  TMapper.h  TOCR.h  TOstreamer.h  TPortal.h  TTracker.h  TWorker.h  ThreadCam.h  TimeKeeper.h  Tjson.h
ALPR_1.5/include/ByteTrack/: BYTETracker.h  STrack.h  kalmanFilter.h
ALPR_1.5/models/: portal_0  portal_1
ALPR_1.5/src/: FPS.cpp  Kmain.cpp  MQTT.cpp  ProcessPipe.cpp  Regression.cpp  TAlbum.cpp  TCollection.cpp  TFFmpeg.cpp  TGstreamer.cpp  TMapper.cpp  TOCR.cpp  TOstreamer.cpp  TPortal.cpp  TWorker.cpp  ThreadCam.cpp  TimeKeeper.cpp  Tjson.cpp  main.cpp
ALPR_1.5/src/ByteTrack/: STrack.cpp  kalmanFilter.cpp  utils.cpp
Warp/: Bird.ods  README.md  Warp  Warp.cbp  main.cpp
YoloMultiDusty/: README.md  YoloMultiDusty.cbp  YoloMultiDusty.depend  YoloMultiDusty.layout  settings.txt
YoloMultiDusty2/: README.md  YoloMultiDusty2.cbp  config.json
YoloV4tinyMulti3/: README.md  YoloV4tinyMulti.cbp  config.json
YoloV4tinyOCR4/: CMakeLists.txt  README.md  YoloV4tinyOCR4.cbp  config.json
YoloV4tinyOCR4/include/: General.h  Numbers.h  ProcessPipe.h  Regression.h  Statistic.h  TMapper.h  TOCR.h  TPortal.h  TPredict2D.h  TSnapShot.h  Tjson.h
YoloV4tinyOCR4/models/: portal0
YoloV4tinyOCR4/src/: FPS.cpp  Main.cpp  ProcessPipe.cpp  Regression.cpp  TMapper.cpp  TOCR.cpp  TPortal.cpp  TSnapShot.cpp  ThreadCam.cpp  Tjson.cpp
(+33 files in other folders)
